--- a/MemeTalk/amplify/backend/backend-config.json
+++ b/MemeTalk/amplify/backend/backend-config.json
@@ -3,7 +3,17 @@
     "MemeTalk": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
-      "dependsOn": [],
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "MemeTalkPostAuthentication",
+          "triggerProvider": "Cognito",
+          "attributes": [
+            "Arn",
+            "Name"
+          ]
+        }
+      ],
       "customAuth": false,
       "frontendAuthConfig": {
         "socialProviders": [],
@@ -46,6 +56,13 @@
           ]
         }
       }
+    }
+  },
+  "function": {
+    "MemeTalkPostAuthentication": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   }
 }
