--- a/MemeTalk/package.json
+++ b/MemeTalk/package.json
@@ -42,10 +42,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/aws-lambda": "^8.10.104",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
+    "metro-config": "^0.72.3",
     "react-test-renderer": "18.0.0",
     "typescript": "~4.3.5"
   },
